Fixed Home Page on Mobile

--- a/style.css
+++ b/style.css
@@ -344,7 +344,6 @@ hr {
   padding: 40px;
   color: #ffffff;
   overflow: hidden;
-  white-space: nowrap;
   margin: 0 auto;
   letter-spacing: .1em;
   font-size: 40px;
